--- a/test/styles.css
+++ b/test/styles.css
@@ -1,10 +1,10 @@
-#search {
+#desktop #search {
   border-bottom: 1px solid #000;
   padding: 10px;
   margin: -20px -20px 10px -20px;
 }
 
-#search .contents {
+#desktop #search > .container {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -12,7 +12,7 @@
   flex-wrap: nowrap;
 }
 
-#search .contents input {
+#desktop #search > .container input {
   flex-grow: 1;
 }
 
